WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107576
REGRESION(
r130774
): preferred width of tables does not take max-width into account
https://bugs.webkit.org/show_bug.cgi?id=107576
Summary
REGRESION(r130774): preferred width of tables does not take max-width into ac...
Tony Chang
Reported
2013-01-22 11:43:44 PST
We forgot to update computePreferredLogicalWidth to consider max-width when adding this to tables in
bug 98455
. This causes us to have lots of extra space when we shrink wrap a table with max-width. Ojan volunteered to put together a fix that we can merge to the release and beta branches. Originally reported in
https://code.google.com/p/chromium/issues/detail?id=170642
.
Attachments
Patch
(5.03 KB, patch)
2013-01-22 13:41 PST
,
Ojan Vafai
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ojan Vafai
Comment 1
2013-01-22 13:41:00 PST
Created
attachment 184042
[details]
Patch
Julien Chaffraix
Comment 2
2013-01-22 15:27:45 PST
Comment on
attachment 184042
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=184042&action=review
> Source/WebCore/rendering/RenderTable.cpp:730 > + // FIXME: This should probably be checking for isSpecified since you should be able to use percentage, calc or viewport relative values for min-width.
Why don't we fix that now instead of waiting?
> LayoutTests/ChangeLog:9 > + * fast/table/min-max-width-preferred-size.html: Added.
It would be nice to have some testing with box-sizing set on the table.
> LayoutTests/fast/table/min-max-width-preferred-size.html:1 > +<style>
Do we really need a quirksmode test?
WebKit Review Bot
Comment 3
2013-01-22 15:29:30 PST
Comment on
attachment 184042
[details]
Patch Clearing flags on attachment: 184042 Committed
r140479
: <
http://trac.webkit.org/changeset/140479
>
WebKit Review Bot
Comment 4
2013-01-22 15:29:34 PST
All reviewed patches have been landed. Closing bug.
Ojan Vafai
Comment 5
2013-01-22 16:52:11 PST
Comment on
attachment 184042
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=184042&action=review
>> Source/WebCore/rendering/RenderTable.cpp:730 >> + // FIXME: This should probably be checking for isSpecified since you should be able to use percentage, calc or viewport relative values for min-width. > > Why don't we fix that now instead of waiting?
This is done this way throughout the rendering code. My plan was to get rid of all the copy-paste first and then fix this in the couple of places that remain.
>> LayoutTests/ChangeLog:9 >> + * fast/table/min-max-width-preferred-size.html: Added. > > It would be nice to have some testing with box-sizing set on the table.
OK. I'll add this in a followup patch.
>> LayoutTests/fast/table/min-max-width-preferred-size.html:1 >> +<style> > > Do we really need a quirksmode test?
Whoops. That was just a mistake.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug