REGRESION(r130774): preferred width of tables does not take max-width into account https://bugs.webkit.org/show_bug.cgi?id=107576

Reviewed by Tony Chang.

Source/WebCore:

Constrain preferred widths by min/max the way we do in other
RenderBlock subclasses. Eventually, we'll shared the code with
RenderBlock, but this is an incremental step in that direction
that we can safely merge into release branches.

Test: fast/table/min-max-width-preferred-size.html

* rendering/RenderTable.cpp:
(WebCore::RenderTable::computePreferredLogicalWidths):

LayoutTests:

* fast/table/min-max-width-preferred-size-expected.txt: Added.
* fast/table/min-max-width-preferred-size.html: Added.


Canonical link: https://commits.webkit.org/125824@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140479 268f45cc-cd09-0410-ab3c-d52691b4dbfc